--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,5 +6,6 @@
     <color name="couleur_btn_jaune">#E9E109</color>
     <color name="couleur_btn_typeVol">#BDBDBA</color>
     <color name="couleurAppuyée">#502F3969</color>
+    <color name="grey">#504C4F60</color>
 
 </resources>
