--- a/app/src/main/res/layout/fragment_vue_accueil.xml
+++ b/app/src/main/res/layout/fragment_vue_accueil.xml
@@ -15,6 +15,7 @@
         app:layout_constraintBottom_toTopOf="@id/guideline_bottom_text"/>
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerConversation"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         tools:listitem="@layout/conversation_item"
