--- a/app/src/main/res/drawable/fond_transparent_blanc_bottom.xml
+++ b/app/src/main/res/drawable/fond_transparent_blanc_bottom.xml
@@ -2,5 +2,7 @@
 <!-- source : https://stackoverflow.com/questions/39571572/how-to-add-gradient-to-image-and-text-in-frame-layout -->
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
     <gradient android:angle="270"
+        android:startColor="#78FFFFFF"
+        android:centerColor="#9CFFFFFF"
         android:endColor="#ffffff" />
 </shape>
