--- a/app/src/main/res/layout/fragment_vue_login.xml
+++ b/app/src/main/res/layout/fragment_vue_login.xml
@@ -10,11 +10,16 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scaleType="centerCrop"
-        android:src="@drawable/bg_login"
+        android:src="@drawable/bann"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@drawable/fond_transparent_blanc_bottom"/>
 
     <androidx.cardview.widget.CardView
         android:layout_width="0dp"
