--- a/app/src/main/res/layout/fragment_vue_login.xml
+++ b/app/src/main/res/layout/fragment_vue_login.xml
@@ -60,7 +60,7 @@
                 android:hint="@string/email"
                 app:layout_constraintTop_toBottomOf="@id/loginTitreTextView">
 
-                <EditText
+                <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/emailEditText"
                     android:layout_width="match_parent"
                     android:layout_height="52dp"
@@ -77,7 +77,7 @@
                 android:hint="@string/password"
                 app:layout_constraintTop_toBottomOf="@id/layoutEmailTextInput">
 
-                <EditText
+                <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/passwordEditText"
                     android:layout_width="match_parent"
                     android:layout_height="52dp"
