--- a/app/src/main/res/layout/message_item.xml
+++ b/app/src/main/res/layout/message_item.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout
+    android:id="@+id/root"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
@@ -57,8 +59,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Hello je suis Nom Complet"
+            android:maxWidth="260dp"
             app:layout_constraintStart_toEndOf="@id/guideline_start_text"
-            app:layout_constraintBottom_toTopOf="@id/guideline_bottom_description"
+            app:layout_constraintTop_toBottomOf="@id/nomTextView"
             />
 
         <androidx.constraintlayout.widget.Guideline
@@ -66,7 +69,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            app:layout_constraintGuide_percent="0.3"
+            app:layout_constraintGuide_percent="0.23"
             />
 
         <androidx.constraintlayout.widget.Guideline
@@ -78,19 +81,11 @@
             />
 
         <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/guideline_bottom_description"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            app:layout_constraintGuide_percent="0.6"
-            />
-
-        <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline_start_buddy"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            app:layout_constraintGuide_percent="0.02"
+            app:layout_constraintGuide_percent="0"
             />
 
         <androidx.constraintlayout.widget.Guideline
@@ -98,7 +93,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            app:layout_constraintGuide_percent="0.25"
+            app:layout_constraintGuide_percent="0.2"
             />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
