--- a/app/src/main/res/drawable/fond_bord_arrondis.xml
+++ b/app/src/main/res/drawable/fond_bord_arrondis.xml
@@ -1,10 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle" >
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+    <!-- Shadow layer -->
+    <item>
+        <shape android:shape="rectangle">
+            <solid android:color="#80000000"/> <!-- Shadow color -->
+            <corners android:radius="12dp"/>   <!-- Rounded corners -->
+        </shape>
+    </item>
 
-    <solid android:color="#fff" />
+    <item>
+        <shape
+            android:shape="rectangle" >
 
-    <corners
-        android:radius="16dp" />
+            <solid android:color="#fff" />
 
-</shape>
+            <corners
+                android:radius="12dp" />
+
+            <stroke
+                android:width="1dp"
+                android:color="@color/grey"
+                />
+
+        </shape>
+    </item>
+</layer-list>
