--- a/app/src/main/res/drawable/circle_shape.xml
+++ b/app/src/main/res/drawable/circle_shape.xml
@@ -1,11 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="ring"
-    android:innerRadiusRatio="2.5"
-    android:thickness="4dp"
+    android:shape="oval"
+    android:innerRadiusRatio="2.2"
     android:useLevel="false">
-
-    <solid android:color="#2C2F3A56" />
 
 
 </shape>
