--- a/app/src/main/res/layout/fragment_vue_nav_bar.xml
+++ b/app/src/main/res/layout/fragment_vue_nav_bar.xml
@@ -40,8 +40,7 @@
             android:src="@drawable/user_plus"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.0" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <ImageButton
             android:id="@+id/buttonModifier"
@@ -52,8 +51,7 @@
             android:src="@drawable/user_pen"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@id/buttonMesDemandes"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.0" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <ImageButton
             android:id="@+id/buttonNotification"
@@ -62,11 +60,23 @@
             android:layout_marginEnd="28dp"
             android:backgroundTint="@color/couleur_principale"
             android:src="@drawable/bell"
-            android:text=""
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/buttonParametres"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <View
+            android:id="@+id/indicateurNotifView"
+            android:layout_width="0dp"
+            android:layout_height="15dp"
+            android:layout_marginEnd="38dp"
+            android:layout_marginBottom="25dp"
+            android:backgroundTint="#C51818"
+            android:background="@drawable/circle_shape"
+            app:layout_constraintDimensionRatio="1:1"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/buttonParametres"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="1.0" />
+            android:visibility="gone"/>
 
         <ImageButton
             android:id="@+id/buttonParametres"
