--- a/app/src/main/res/layout/message_item.xml
+++ b/app/src/main/res/layout/message_item.xml
@@ -9,6 +9,7 @@
     android:layout_marginStart="10dp"
     android:layout_marginTop="10dp"
     android:layout_marginEnd="10dp"
+    android:layout_marginBottom="5dp"
     android:background="@drawable/fond_message"
     android:padding="20dp"
     android:elevation="40dp">
@@ -64,6 +65,17 @@
             app:layout_constraintTop_toBottomOf="@id/nomTextView"
             />
 
+        <TextView
+            android:id="@+id/dateTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:text="12 février 2012 00:00"
+            app:layout_constraintBottom_toTopOf="@id/guideline_bottom_date"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/messageTextView"
+            app:layout_constraintVertical_bias="1.0" />
+
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline_start_text"
             android:layout_width="wrap_content"
@@ -94,6 +106,14 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             app:layout_constraintGuide_percent="0.2"
+            />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline_bottom_date"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_percent="1"
             />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
