--- a/app/src/main/res/drawable/fond_bord_arrondis.xml
+++ b/app/src/main/res/drawable/fond_bord_arrondis.xml
@@ -3,8 +3,8 @@
     <!-- Shadow layer -->
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="#80000000"/> <!-- Shadow color -->
-            <corners android:radius="12dp"/>   <!-- Rounded corners -->
+            <solid android:color="#80000000"/>
+            <corners android:radius="12dp"/>
         </shape>
     </item>
 
@@ -19,7 +19,7 @@
 
             <stroke
                 android:width="1dp"
-                android:color="@color/grey"
+                android:color="#23B3BCEF"
                 />
 
         </shape>
