--- a/app/src/main/res/layout/notification_item.xml
+++ b/app/src/main/res/layout/notification_item.xml
@@ -58,6 +58,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Hello je suis Nom Complet"
+            android:maxWidth="200dp"
             app:layout_constraintStart_toEndOf="@id/guideline_start_text"
             app:layout_constraintBottom_toTopOf="@id/guideline_bottom_description"
             />
