Ajout intentLaucher pour bannière

--- a/app/src/main/res/layout/fragment_vue_profile.xml
+++ b/app/src/main/res/layout/fragment_vue_profile.xml
@@ -180,6 +180,19 @@
         app:layout_constraintTop_toBottomOf="@id/guideline_bottom_btn"
         app:layout_constraintStart_toEndOf="@id/guideline_start_btn"/>
 
+    <Button
+        android:id="@+id/btnChangeBanner"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:backgroundTint="@color/accepter"
+        android:text="@string/changer_votre_banni_re"
+        android:layout_marginTop="30dp"
+        android:drawableEnd="@drawable/image"
+        app:cornerRadius="6dp"
+        app:strokeColor="#CECECE"
+        app:layout_constraintTop_toBottomOf="@id/layoutStatutTextInput"
+        app:layout_constraintStart_toEndOf="@id/guideline_start_input"/>
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/barDeChargement"
         android:layout_width="match_parent"
@@ -237,6 +250,14 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         app:layout_constraintGuide_percent="0.65"
+        />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline_end_btn_banner"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.6"
         />
 
     <androidx.constraintlayout.widget.Guideline
